# BelialZip

./: CMakeLists.txt  Readme.md  belialzip  bellzip  compressor  main.cpp  output.txt
include/belialzip/core/: bitstream.hpp  huffman.hpp  lz77.hpp  rle.hpp
include/belialzip/engine/: huffman.hpp
include/belialzip/io/: header.hpp
src/core/: bitstream.cpp  huffman.cpp  lz77.cpp  rle.cpp
src/io/: header.cpp
tests/: CMakeLists.txt  test_bitstream.cpp  test_header.cpp  test_huffman.cpp  test_lz77.cpp  test_rle.cpp
